[package]
name = "diskallocator"
version = "0.1.1"
edition = "2021"
authors = ["Julian Büttner <git@julianbuettner.dev>"]
license = "MIT"
repository = "https://github.com/julianbuettner/diskallocator"
readme = "README.md"
description = "For really big vectors: allocate on disk"


[lib]
name = "diskallocator"
crate-type = ["lib"]

[dependencies]
libc = "0.2.141"
tempfile = "3.5.0"

[dev-dependencies]
rand = "0.8.5"
